Resolves: tdf#133485 Append % character also for a leading decimal separator

... starting input in a percent formatted cell, as such .12 input
is recognized as valid number.

Change-Id: I97c0b5824ec8644ea58e20960aa27381607cba0c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/95092
Tested-by: Jenkins
Reviewed-by: Eike Rathke <erack@redhat.com>
(cherry picked from commit 0ed29654eb06958e619994c892b5dbc7d0419fd7)